--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ python-dotenv
 python-telegram-bot[job-queue]~=20.0
 ptbcontrib[ptb_jobstores_sqlalchemy] @ git+https://github.com/python-telegram-bot/ptbcontrib.git@main
 psycopg2-binary
+requests
+langchain
+langgraph
+langchain-openai
+langgraph-checkpoint-sqlite	
